# gametrack-data

./: README.md  flake.nix  games.csv  gametrack_data.csv  gametrack_data.py  metrics.prom  package.nix  pyproject.toml  requirements.txt  schema.sql
.github/: dependabot.yml
.github/workflows/: merge.yml  publish.yml  test.yml
