[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gametrack-data"
version = "1.1.1"
readme = "README.md"
authors = [{ name = "Joshua Peek" }]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[tool.hatch.build.targets.wheel.force-include]
"gametrack_data.py" = "gametrack_data/__init__.py"

[project.scripts]
gametrack-data = "gametrack_data:main"

[dependency-groups]
dev = ["mypy>=1.0.0,<2.0", "ruff>=0.11.0"]

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.mypy]
strict = true
